wxc/include/ewxw/wxc_glue.h



/* wxColourData */
TClassDefExtend(wxColourData,wxObject)
TClass(wxColourData) wxColourData_Create(  );

void       wxColourData_Delete( TSelf(wxColourData) _obj );

int        wxColourData_GetChooseFull( TSelf(wxColourData) _obj );

void       wxColourData_GetColour( TSelf(wxColourData) _obj, TClassRef(wxColour) _ref );

void       wxColourData_GetCustomColour( TSelf(wxColourData) _obj, int i, TClassRef(wxColour) _ref );

void       wxColourData_SetChooseFull( TSelf(wxColourData) _obj, int flag );

void       wxColourData_SetColour( TSelf(wxColourData) _obj, TClass(wxColour) colour );

void       wxColourData_SetCustomColour( TSelf(wxColourData) _obj, int i, TClass(wxColour) colour );